roll up default css theme and add new js color switcher. some changes to the html will break the zephyr theme, i'll fix it later.

--- a/trunk/package/webif/files/www/themes/xwrt/color_black.css
+++ b/trunk/package/webif/files/www/themes/xwrt/color_black.css
@@ -1,163 +1,45 @@
-/* color theme navy blue */
-
-html, body
-{
-	color: #CCC;
-	background-color: #111;
+ /* color theme: brown */
+ body {
+ 	background-color: black;
+ }
+#header {
+	color: #ccc;
+	background-color: #333;
 }
 
-#header,
-#short-status
-{
-	color: #CCC;
-	background-color: #444;
+a {
+	color: white;
+}
+#mainmenu {
+	border-bottom: 1px solid grey;
 }
 
-#update-available
-{
-	color: #FF0000;
-}
-
-#update-unavailable
-{
-	color: #000000;
-}
-
-#update-error
-{
-	color: #FF0000;
-}
-
-.openwrt-title
-{
-	color: #FFF;
-}
-
-#header-title,
 #submenu,
-#submenu a,
-#save a,
-#save .page-save
-{
-	color: #CCC;
-}
+#mainmenu,
+#save .page-save, #footer { background-color: #000; }
 
-#header-title,
-#save .apply div
-{
-	background-color: #111;
-}
-
-#mainmenu
-{
-	color: #C3C4D2;
-	background-color: #111;
-}
-
-#mainmenu a
-{
-	color: #C3C4D2;
-}
+#save .apply { background-color: #000; }
 
 #mainmenu a:hover,
 #submenu a:hover,
-#save a:hover,
 #mainmenu .selected a,
-#submenu .selected a
-{
-	color: #000;
-	background-color: #C3C4D2;
+#submenu .selected a,
+#save a:hover { background-color: #C3C4D2; color: black; }
+
+#content {
+	background-color: #000;
+	color: #ccc;
 }
-
-#submenu,
-#save div
-{
-	color: #CCC;
-	background-color: #111;
+#content h3 {
+color: white;
+	background-color: transparent;
 }
-
-#content .settings-block .settings-block-title h2
-{
-	color: #CCC;	
-}
-
-#content .settings-block
-{
-	color: #CCC;
-	background-color: #111;
-}
-
-#content .settings-title
-{	
-	color: #CCC;
-	background-color: #111;
-}
-
-#content .settings
-{
-	color: #CCC;
-	background-color: #111;
-}
-
-#save .page-save
-{
-	color: #CCC;
-	background-color: #111;
-}
-
-.progressbar-title
-{
-
-}
-
-.progressbar-whole
-{
-
-}
-
-.progressbar-filled
-{
-	color: #FFFFFF;
+.progressbar-filled {
+	color: White;
 	background-color: #2b1b9f;
 }
 
-.progressbar-unfilled
-{
-	color: #111;
-	background-color: #111;
-}
-
-.mount-target
-{
-	
-}
-
-.warning
-{
-	color: red;
-}
-
-.logread
-{
-	color: #FFF;
-}
-
-#footer-logo
-{
-	color: #FFF;
-}
-
-.kb
-{
-	color: #CCC;
-}
-
-.even
-{
-	color: #111;
-}
-
-#mainmenu
-{
-	border-bottom-color: #CCC;	
+.progressbar-unfilled {
+	color: Black;
+	background-color: Black;
 }
